# ros2-dds-scalability-bench

./: .gitignore  README.md  docker-compose.yml  requirements.txt
configs/: cyc_2m.xml  cyc_64k.xml  cyc_8m.xml  cyclonedds.xml  fast_2m.xml  fast_64k.xml  fast_8m.xml  fastdds_profiles.xml
docker/: Dockerfile
results/default/: cyclonedds_p2097152_n10.csv  cyclonedds_p2097152_n100.csv  cyclonedds_p2097152_n2.csv  cyclonedds_p2097152_n20.csv  cyclonedds_p2097152_n50.csv  cyclonedds_p32768_n10.csv  cyclonedds_p32768_n100.csv  cyclonedds_p32768_n2.csv  cyclonedds_p32768_n20.csv  cyclonedds_p32768_n50.csv  explain.md  fastdds_p2097152_n10.csv  fastdds_p2097152_n2 copy.csv  fastdds_p2097152_n20.csv  fastdds_p2097152_n50.csv  fastdds_p32768_n10.csv  fastdds_p32768_n100.csv  fastdds_p32768_n2.csv  fastdds_p32768_n20.csv  fastdds_p32768_n50.csv
results/phase 1. Transport Layer/: cyclonedds_b2m_p2097152_n10.csv  cyclonedds_b2m_p2097152_n2.csv  cyclonedds_b2m_p32768_n10.csv  cyclonedds_b2m_p32768_n2.csv  cyclonedds_b64k_p2097152_n10.csv  cyclonedds_b64k_p2097152_n2.csv  cyclonedds_b64k_p32768_n10.csv  cyclonedds_b64k_p32768_n2.csv  cyclonedds_b8m_p2097152_n10.csv  cyclonedds_b8m_p2097152_n2.csv  cyclonedds_b8m_p32768_n10.csv  cyclonedds_b8m_p32768_n2.csv  fastdds_b2m_p2097152_n10.csv  fastdds_b2m_p2097152_n2.csv  fastdds_b2m_p2097152_n20.csv  fastdds_b2m_p2097152_n50.csv  fastdds_b2m_p32768_n10.csv  fastdds_b2m_p32768_n100.csv  (+21 more)
scripts/: launcher.py  run_bench.sh  visualize.py
workspace/src/dds_bench/: CMakeLists.txt  package.xml
workspace/src/dds_bench/src/: perf_node.cpp
